--- a/irc.tw/index.html
+++ b/irc.tw/index.html
@@ -5,6 +5,6 @@
 <meta http-equiv="refresh" content="5; url=mdwiki.html#!index.md">
 <title></title>
 </head>
-<body onload="window.location = 'mdwiki.html#!index.md'">
+<body onload="window.location = '/irc.tw/mdwiki.html#!index.md'">
 </body>
 </html>
