--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>YSITD</title>
 <style>
 body {
+  font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
   counter-reset: section;                   /* Set the section counter to 0 */
 }
 .page:after {
