--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ body {
   text-align:center;
   vertical-align:middle;
   line-height:0px;
+  white-space: nowrap;
 }
 
 .p1,.p1 a{
@@ -75,6 +76,7 @@ body {
   text-align:center;
   vertical-align:middle;
   line-height:0px;
+  white-space: nowrap;
 }
 
 .p2,.p2 a{
