--- a/index.html
+++ b/index.html
@@ -71,12 +71,20 @@ body {
   white-space: nowrap;
 }
 
+.p0 {
+  font-size:0px;
+}
+
 .p1,.p1 a{
   font-size:200px;
   text-align:center;
   vertical-align:middle;
   line-height:0px;
   white-space: nowrap;
+}
+
+.p1 {
+  font-size:0px;
 }
 
 .p2,.p2 a{
