--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ body {
   height:100%;
   background:#ffffff;
   border-bottom:1px solid #777777;
+  overflow:hidden;
 }
 .page .placeholder{
   display:inline-block;
