--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
   <meta charset="utf-8">
   <title>YSITD</title>
   <meta name=viewport content="width=device-width, initial-scale=1">
-
+  <meta name="description" content="YSITD | Young Students' IT Discussion | 主題：資訊、電子、開源、遊戲、社會、哲學、數學、海豹與丹丹爸可愛的家(誤)" />
+  
+  <!-- start of SEO area -->
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+  <meta property="og:title" content="YSITD | Young Students' IT Discussion" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://ysitd.github.io/" />
+  <meta property="og:image" content="http://ysitd.github.io/ysitd.jpg" />
+  <!-- end of SEO area -->
+  
 <style>
 body {
   font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
