also add favicon tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name=viewport content="width=device-width, initial-scale=1">
   <meta name="description" content="YSITD | Young Students' IT Discussion | 主題：資訊、電子、開源、遊戲、社會、哲學、數學、海豹與丹丹爸可愛的家(誤)" />
   
+  <link rel="shortcut icon" href="http:///ysitd.github.io/favicon.ico" type="image/vnd.microsoft.icon">
+  <link rel="icon" href="http://ysitd.github.io/favicon.ico" type="image/vnd.microsoft.icon">
+  
   <!-- start of SEO area -->
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta property="og:title" content="YSITD | Young Students' IT Discussion" />
