--- a/index.html
+++ b/index.html
@@ -86,6 +86,34 @@ body {
   white-space: nowrap;
 }
 
+.p0 .img-wrap{
+  border : 4px solid #777777;
+  border-right : 4px solid #aaaaaa;
+  border-bottom : 4px solid #aaaaaa;
+  border-radius : 40px;
+  display : inline-block;
+  vertical-align:middle;
+  overflow : hidden;
+  
+  position : relative;
+}
+
+.p0 .img-overlay {
+  position : absolute;
+  top : 0px;
+  left : 0px;
+  right : 0px;
+  bottom : 0px;
+  -webkit-box-shadow: inset 40px 40px 40px 0px rgba(255,255,255,0.8);
+  -moz-box-shadow: inset 40px 40px 40px 0px rgba(255,255,255,0.8);
+  box-shadow: inset 40px 40px 40px 00px rgba(255,255,255,0.8);
+}
+
+.p0 img {
+  vertical-align:middle;
+  height : 200px;
+}
+
 .p1,.p1 a{
   font-size:200px;
   text-align:center;
@@ -109,6 +137,10 @@ body {
     vertical-align:middle;
     line-height:0px;
   }
+  .p0 img {
+    vertical-align:middle;
+    height : 140px;
+  }
 
   .p1,.p1 a{
     font-size:140px;
@@ -124,6 +156,24 @@ body {
     vertical-align:middle;
     line-height:0px;
   }
+  
+  .p0 .img-wrap{
+    border : 2px solid #777777;
+    border-right : 2px solid #aaaaaa;
+    border-bottom : 2px solid #aaaaaa;
+    border-radius : 20px;
+  }
+  
+  .p0 img {
+    vertical-align:middle;
+    height : 70px;
+  }
+
+  .p0 .img-overlay {
+    -webkit-box-shadow: inset 20px 20px 20px 0px rgba(255,255,255,0.8);
+    -moz-box-shadow: inset 20px 20px 20px 0px rgba(255,255,255,0.8);
+    box-shadow: inset 20px 20px 20px 00px rgba(255,255,255,0.8);
+  }
 
   .p1,.p1 a{
     font-size:70px;
@@ -138,6 +188,21 @@ body {
     text-align:center;
     vertical-align:middle;
     line-height:0px;
+  }
+  
+  .p0 .img-wrap{
+    border-radius : 15px;
+  }
+  
+  .p0 img {
+    vertical-align:middle;
+    height : 40px;
+  }
+  
+  .p0 .img-overlay {
+    -webkit-box-shadow: inset 15px 15px 15px 0px rgba(255,255,255,0.8);
+    -moz-box-shadow: inset 15px 15px 15px 0px rgba(255,255,255,0.8);
+    box-shadow: inset 15px 15px 15px 00px rgba(255,255,255,0.8);
   }
 
   .p1,.p1 a{
@@ -162,6 +227,10 @@ body {
   <div class="pages">
     <div class="page p0">
       <li class="placeholder"></li>
+      <div class="img-wrap">
+        <img src="ysitd.jpg">
+        <div class="img-overlay"></div>
+      </div>
       <span style="color:red;">Y</span>
       <span style="color:orange;">S</span>
       <span style="color:yellow;">I</span>
