--- a/index.html
+++ b/index.html
@@ -171,14 +171,35 @@ body {
   height : 200px;
 }
 
-.p1 {
-  
+.p1 .user-bg{
+  position : absolute;
+  left : 0px;
+  top : 0px;
+  width : 100%;
+  height  : 100%;
+  clip: rect(auto, auto, auto, auto);
+}
+
+.p1 .user-bg-inner {
+  position : fixed;
+  left : 0px;
+  top : 0px;
+  width : 100%;
+  height  : 100%;
   background-image : url("user-bg.jpg");
-  background-attachment : fixed;
+  background-attachment : scroll;
   background-repeat : no-repeat;
   background-position : center center;
   background-size: 100% 100%;
   background-size: cover;
+}
+
+.p1-inner {
+  position : absolute;
+  left : 0px;
+  top : 0px;
+  height : 100%;
+  width : 100%;
 }
 
 .p1,.p1 a{
@@ -325,8 +346,13 @@ body {
       <span style="color:blue;">D</span>
     </div>
     <div class="page p1">
-      <li class="placeholder"></li>
-      <a href="/users">USERS</a></div>
+      <div class="user-bg">
+        <div class="user-bg-inner"></div>
+      </div>
+      <div class="p1-inner">
+        <li class="placeholder"></li>
+        <a href="/users">USERS</a></div>
+      </div>
     <div class="page p2">
       <li class="placeholder"></li>
       <a href="commandGenerator.html">command generator</a>
