--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@ body {
   width : 100%;
   height  : 100%;
   clip: rect(auto, auto, auto, auto);
+  z-index : 1;
 }
 
 .p1 .user-bg-inner {
@@ -200,6 +201,7 @@ body {
   top : 0px;
   height : 100%;
   width : 100%;
+  z-index : 2;
 }
 
 .p1,.p1 a{
