--- a/index.html
+++ b/index.html
@@ -155,6 +155,12 @@ body {
   box-shadow:  4px 4px 4px 0px rgba(0,0,0,1);
 }
 
+.p0 .img-wrap-inner {
+  width : 100%;
+  height : 100%;
+  overflow : hidden;
+}
+
 .p0 .img-overlay {
   position : absolute;
   top : 0px;
@@ -338,7 +344,9 @@ body {
     <div class="page p0">
       <li class="placeholder"></li>
       <div class="img-wrap">
-        <img src="ysitd.jpg">
+        <div class="img-wrap-inner">
+          <img src="ysitd.jpg">
+        </div>
         <div class="img-overlay"></div>
       </div>
       <span style="color:red;">Y</span>
