--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ body {
   border : 4px solid #777777;
   border-right : 4px solid #aaaaaa;
   border-bottom : 4px solid #aaaaaa;
-  border-radius : 40px;
+  border-radius : 44px;
   display : inline-block;
   vertical-align:middle;
   overflow : hidden;
@@ -159,6 +159,7 @@ body {
   width : 100%;
   height : 100%;
   overflow : hidden;
+  border-radius: 40px;
 }
 
 .p0 .img-overlay {
@@ -268,6 +269,9 @@ body {
     border : 2px solid #777777;
     border-right : 2px solid #aaaaaa;
     border-bottom : 2px solid #aaaaaa;
+    border-radius : 22px;
+  }
+  .p0 .img-wrap-inner {
     border-radius : 20px;
   }
   
@@ -304,6 +308,9 @@ body {
   }
   
   .p0 .img-wrap{
+    border-radius : 17px;
+  }
+  .p0 .img-wrap-inner {
     border-radius : 15px;
   }
   
