--- a/index.html
+++ b/index.html
@@ -139,6 +139,8 @@ body {
 }
 
 .p0 .img-wrap{
+  background : #aaaaaa;
+  
   border : 4px solid #777777;
   border-right : 4px solid #aaaaaa;
   border-bottom : 4px solid #aaaaaa;
@@ -163,6 +165,7 @@ body {
 }
 
 .p0 .img-overlay {
+  border-radius: 40px;
   position : absolute;
   top : 0px;
   left : 0px;
@@ -174,7 +177,6 @@ body {
 }
 
 .p0 img {
-  vertical-align:middle;
   height : 200px;
 }
 
@@ -284,6 +286,7 @@ body {
     -webkit-box-shadow: inset 20px 20px 20px 0px rgba(255,255,255,0.8);
     -moz-box-shadow: inset 20px 20px 20px 0px rgba(255,255,255,0.8);
     box-shadow: inset 20px 20px 20px 00px rgba(255,255,255,0.8);
+  border-radius: 20px;
   }
 
   .p1,.p1 a{
@@ -323,6 +326,7 @@ body {
     -webkit-box-shadow: inset 15px 15px 15px 0px rgba(255,255,255,0.8);
     -moz-box-shadow: inset 15px 15px 15px 0px rgba(255,255,255,0.8);
     box-shadow: inset 15px 15px 15px 00px rgba(255,255,255,0.8);
+  border-radius: 15px;
   }
 
   .p1,.p1 a{
