precompose background instead for compatibility

--- a/index.html
+++ b/index.html
@@ -74,12 +74,13 @@ body {
   bottom:-10px;
   top:-10px;
   
-  
+  /*
   filter: blur(2px) brightness(0.4); 
   -webkit-filter: blur(2px) brightness(0.4);
   -moz-filter: blur(2px) brightness(0.4);
   -o-filter: blur(2px) brightness(0.4); 
   -ms-filter: blur(2px) brightness(0.4);
+  */
   
   overflow:hidden;
 }
@@ -92,7 +93,7 @@ body {
   bottom:0px;
   top:0px;
   
-  background-image : url("background.png");
+  background-image : url("background-processed.png");
   background-repeat : no-repeat;
   background-position : center center;
   background-size: 100% 100%;
