fix og:image path

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <meta property="og:title" content="YSITD | Young Students' IT Discussion" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="http://ysitd.github.io/" />
-  <meta property="og:image" content="http://ysitd.github.io/ysitd.jpg" />
+  <meta property="og:image" content="http://ysitd.github.io/images/ysitd.jpg" />
   <meta property="og:site_name" content="YSITD"/>
   <meta property="og:description" content="YSITD | Young Students' IT Discussion | 主題：資訊、電子、開源、遊戲、社會、哲學、數學、海豹與丹丹爸可愛的家(誤)"/>
   <!-- end of SEO area -->
