--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
       </p>
       <p>
         IRC : 
-        <a class="no-icon" href="irc://irc.freenode.net:6697/#ysitd">
-          irc://irc.freenode.net:6697/#ysitd
+        <a class="no-icon" href="irc://irc.freenode.net:6697/ysitd">
+          irc://irc.freenode.net:6697/ysitd
         </a>
       </p>
       <p>
